Fix Next/Back button height mismatch by removing align-self: flex-start

--- a/src/index.css
+++ b/src/index.css
@@ -562,7 +562,6 @@ body {
 }
 
 .btn-next {
-  align-self: flex-start;
   background-color: #d95c88;
   color: #fff;
   font-family: 'DM Sans', sans-serif;
